small layout done

--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 <body>
     <section class="nav">
         <div class="nav-container">
-            <div class="container">
-                <div id="logo"><h1>Andrea Nicholson</h1></div>
-                <div class="btn-container">
-                    <div class="nav-btn"><a href="contact.html">Contact</a></div>
-                    <div class="nav-btn"><a href="portfolio.html">Portfolio</a></div>
-                    <div class="nav-btn"><a href="index.html">About</a></div>
-                </div>
+            <div id="logo"><h1>Andrea Nicholson</h1></div>
+            <div class="btn-container">
+                <div class="nav-btn"><a href="contact.html">Contact</a></div>
+                <div class="nav-btn"><a href="portfolio.html">Portfolio</a></div>
+                <div class="nav-btn"><a href="index.html">About</a></div>
             </div>
         </div>
     </section>
@@ -26,7 +24,7 @@
                 <h2>About Me</h2>
             </div>
             <img src="assets/images/profile.jpg" alt="Andrea Nicholson's Profile Photo" id="profile-photo">
-            <div class="container">
+            <div class="container-index">
                 <p class="body-text">Andrea Nicholson is an aspiring developer, artist, and all-around nerd based in Raleigh, NC.  After graduating 
                     from East Carolina University in 2013 with a BFA in Animation and Interactive Design, Andrea returned to the triangle and began 
                     working for Wake County Public Libraries as a Youth Services Library Assistant, using her Google-fu for the benefit of the 
