--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,11 @@
     <section class="nav">
         <div class="nav-container">
             <div id="logo"><h1>Andrea Nicholson</h1></div>
-            <div class="nav-btn"><a href="contact.html">Contact</a></div>
-            <div class="nav-btn"><a href="portfolio.html">Portfolio</a></div>
-            <div class="nav-btn"><a href="index.html">About</a></div>
+            <div class="btn-container">
+                <div class="nav-btn"><a href="contact.html">Contact</a></div>
+                <div class="nav-btn"><a href="portfolio.html">Portfolio</a></div>
+                <div class="nav-btn"><a href="index.html">About</a></div>
+            </div>
         </div>
     </section>
     <section class="content">
@@ -21,7 +23,7 @@
             <div>
                 <h2>Portfolio</h2>
             </div>
-            <div class="container">
+            <div class="container-portfolio">
                 <a href="">
                     <div class="portfolio-item">
                         <img src="assets/images/portfolio1.jpg" class="portfolio-img" alt="Hangman Project">
